--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">ILoveNougat</string>
+    <string name="loading">Please wait..</string>
+    <string name="product_not_found">No product found! Please check some other product.</string>
+    <string name="product_new_not_found">No new product found!</string>
+    <string name="error_getting_result">Error getting the result from the Zappos.com</string>
+    <string name="internet_connection">Please check your internet connection</string>
+    <string name="no_product_6pm">No product found on 6PM</string>
+    <string name="error_6pm">Error getting the result from the 6PM</string>
+    <string name="error_input">Please input the text correctly</string>
+    <string name="string_yes">Yes! Go Ahead!</string>
+    <string name="string_no">No! I will stay with Zappos</string>
 </resources>
